[tool.poetry]
name = "ressimplotter"
version = "0.1.0"
description = "A Python package for reservoir simulation plotting and visualization"
authors = ["daniel.d.hamill@USACE.army.mil"]
readme = "README.md"
packages = [
    {include = "ressimplotter"}
]
include = [
    "examples/*.py",
    "examples/*.dss"
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.20.0"
pandas = "^1.3.0"
hecdss = "^0.1.28"
altair = "^5.5.0"
vl-convert-python = "^1.8.0"

[tool.poetry.extras]
examples = []  # This enables the examples to be installed

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
flake8 = "^4.0.0"
mypy = "^0.950"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]